# anime-royale

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  anime-royale.data  anime-royale.js  anime-royale.wasm  cmake_install.cmake  compile_flags.txt  index.html
.cache/clangd/index/: anicontroller.c.53C3786CDE2D242C.idx  anicontroller.h.12921983E9D41EEF.idx  anigame.c.55C0106B6640D1E4.idx  anigame.h.BABCF034CC5183E1.idx  auto_rifle.c.165280F2E72498A0.idx  auto_rifle.h.758173F932E31B7A.idx  basic_bullet.c.04DF598329EC473A.idx  basic_bullet.h.24CCBE0AAE822CCF.idx  bg_renderer.c.0FD2F1A2BF4C0F15.idx  bg_renderer.h.6C23BE68BE1B5037.idx  camera.c.F440B4EFF12F92F3.idx  camera.h.42DF70F704BBC3D4.idx  celestial_body.c.E99507676E830386.idx  celestial_body.h.B2D7FC1CA47954E7.idx  collision.c.413517E824C230BB.idx  collision.h.6ADB7DB95739C807.idx  cursor.c.649F6C5CA95711C3.idx  cursor.h.C2D378F469A48B5D.idx  drawables.c.C92563FE247C7403.idx  drawables.h.4C99ED7FD86D036D.idx  game.c.8D463EB098BACC67.idx  game.h.7452820BF760EAD9.idx  game_controller.h.3DF3B7C43CE39486.idx  gameobject.c.31E200679804ED12.idx  gameobject.h.E1013165EF66B2AA.idx  go_min_heap.c.D4399989C526BFDD.idx  go_min_heap.h.54FD2A7B9D831522.idx  go_pool.c.BED83C20F9070F73.idx  go_pool.h.9A28C081F42B360C.idx  gravity_sim.c.B236F9F9B473E8C4.idx  gravity_sim.h.66716E0443E4A810.idx  hash.h.BE96BEC240A84E6F.idx  input.c.BEFB987D5FD7ADD3.idx  input.h.226E7F8A9DA5C5EF.idx  level_layout.c.D2367982F1DD2400.idx  level_layout.h.60A92798BBDF522F.idx  main.c.149F2FD23B8DAD71.idx  main.c.2AF25268D3DE9DBD.idx  main_menu.c.6AACCBB315E5ED74.idx  main_menu.h.12A03DDD118420B7.idx  (+28 more)
.github/workflows/: deploy-test.yml
core/: CMakeLists.txt
core/include/: camera.h  collision.h  game.h  hash.h  input.h  time.h  vector2.h
core/src/: camera.c  collision.c  game.c  gameobject.c  go_min_heap.c  go_pool.c  input.c  time.c  vector2.c
game/: anicontroller.h  main.c  main_menu.c
game/gameobjects/: bg_renderer.c  cursor.c  gravity_sim.c  gravity_sim.h  level_layout.h  planet.c  player.c
game/gameobjects/ui/: ui_button.c  ui_button.h  ui_inventory.c  ui_inventory.h  ui_map.c  ui_map.h
game/gameobjects/weapons/: auto_rifle.c  basic_bullet.c  pistol.c  radial_gun.c  shotgun.c  shotgun.h  weapon.h
html/: index.html
html/styles/: style.css
src/: main.c
src/core/: GameObjectManager.h  camera.c  camera.h  collision.c  collision.h  drawables.h  game.c  game.h  game_controller.h  gameobject.c  gameobject.h  go_min_heap.c  go_min_heap.h  go_pool.c  go_pool.h  hash.h  input.c  input.h  player.c  player.h  time.c  time.h  vector2.c  vector2.h
src/game/: anicontroller.c  anigame.c  anigame.h  ar_controller.c  ar_controller.h  bg_renderer.c  bg_renderer.h  cursor.c  cursor.h  drawables.c  main.c  main_menu.c  main_menu.h  player.c  player.h  sdl_helper.c  sdl_helper.h
src/game/gameobjects/: bg_renderer.c  bg_renderer.h  camera_controller.c  camera_controller.h  celestial_body.c  celestial_body.h  cursor.c  cursor.h  gravity_sim.c  gravity_sim.h  level_layout.c  level_layout.h  planet.c  planet.h  player.c  player.h
src/game/gameobjects/ui/: inventory.c  inventory.h  main_menu.c  main_menu.h  ui_button.c  ui_button.h  ui_inventory.c  ui_map.c  ui_map.h
src/game/gameobjects/weapons/: auto_rifle.c  auto_rifle.h  basic_bullet.c  basic_bullet.h  pistol.c  pistol.h  radial_gun.c  radial_gun.h  shotgun.c  shotgun.h  weapon.c  weapon.h
src/game/weapons/: basic_bullet.c  basic_bullet.h  pistol.c  pistol.h  shotgun.c  shotgun.h  weapon.c  weapon.h
src/test/: test.c
